<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fuel_edit1"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/valor_de_consumo_1"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toEndOf="@+id/iv_gas_1"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fuel_value1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:textColorHint="#546E7A"
            android:textSize="12sp"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fuel_edit2"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/valor_de_consumo_2"
        app:layout_constraintStart_toStartOf="@+id/fuel_edit1"
        app:layout_constraintTop_toBottomOf="@+id/fuel_edit1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fuel_value2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="#546E7A"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btSearch1"
        android:layout_width="137dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="Buscar"
        android:textSize="8dp"
        app:layout_constraintStart_toEndOf="@+id/fuel_edit1"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btSearch2"
        android:layout_width="137dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Buscar"
        android:textSize="8dp"
        app:layout_constraintStart_toEndOf="@+id/fuel_edit2"
        app:layout_constraintTop_toBottomOf="@+id/fuel_edit1"
        tools:ignore="TextSizeCheck,TouchTargetSizeCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/value_litro_1"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/fuel_edit2"
        app:layout_constraintTop_toBottomOf="@+id/fuel_edit2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_litro_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/litro"
            android:inputType="numberDecimal"
            android:textColorHint="#546E7A"
            tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/value_litro_2"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/value_litro_1"
        app:layout_constraintTop_toBottomOf="@+id/value_litro_1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_litro_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Litro"
            android:inputType="numberDecimal"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/iv_gas_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_gas_pistol_second" />

    <ImageView
        android:id="@+id/iv_gas_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="@+id/iv_gas_1"
        app:layout_constraintTop_toBottomOf="@+id/iv_gas_1"
        app:srcCompat="@drawable/ic_gas_pistol_second" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="@+id/iv_gas_2"
        app:layout_constraintTop_toBottomOf="@+id/iv_gas_2"
        app:srcCompat="@drawable/money" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/money" />

    <TextView
        android:id="@+id/result"
        android:layout_width="336dp"
        android:layout_height="315dp"
        android:layout_marginTop="16dp"
        android:text="@string/resultado"
        app:layout_constraintStart_toStartOf="@+id/value_litro_2"
        app:layout_constraintTop_toBottomOf="@+id/value_litro_2" />

</androidx.constraintlayout.widget.ConstraintLayout>